# flow-engine

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  package.json
backend/: Dockerfile  pyproject.toml
backend/src/: app.py  database.py  llm_config.py  models.py  schemas.py  utils.py
backend/src/google_auth/: auth.py  client_secret.json  generate_token.py  token.json
backend/tests/: conftest.py  test.py
frontend/: .nginx.conf  Dockerfile  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  flowUtils.ts  index.css  main.tsx  types.ts
frontend/src/components/: CreateFlowPanel.tsx  CreateOrImportFlow.tsx  FlowsList.tsx  UpdateFlowPanel.tsx
frontend/src/pages/: MainPage.tsx  UpdateFlowPage.tsx
testing/: input.json  real_flow.json
